src/main/codegen/edu/uci/asterix/stream/parser/gen/TQLParser.java
// Generated from TQL.g4 by ANTLR 4.4

	package edu.uci.asterix.stream.parser.gen;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class TQLParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.4", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__18=1, T__17=2, T__16=3, T__15=4, T__14=5, T__13=6, T__12=7, T__11=8, 
		T__10=9, T__9=10, T__8=11, T__7=12, T__6=13, T__5=14, T__4=15, T__3=16, 
		T__2=17, T__1=18, T__0=19, DEFINE=20, SENSOR_COLLECTION=21, OBSERVATION_STREAM=22, 
		SENSORS_TO_OBSERVATION_STREAM=23, SELECT=24, FROM=25, WHERE=26, GROUP=27, 
		BY=28, HAVING=29, DISTINCT=30, AS=31, AND=32, OR=33, NOT=34, NOT_NULL=35, 
		IS_NULL=36, IN=37, ORDER=38, LIMIT=39, OFFSET=40, ASC=41, DESC=42, RANGE=43, 
		SLIDE=44, SECONDS=45, MINUTES=46, HOURS=47, AVG=48, MIN=49, SUM=50, MAX=51, 
		COUNT=52, CAST=53, INT=54, REAL=55, BOOLEAN=56, STRING=57, LIKE=58, IDENTIFIER=59, 
		STRING_LITERAL=60, BOOLEAN_LITERAL=61, INT_LITERAL=62, REAL_LITERAL=63, 
		SINGLE_LINE_COMMENT=64, MULTILINE_COMMENT=65, SPACES=66;
	public static final String[] tokenNames = {
		"<INVALID>", "'/'", "'!='", "'>='", "'['", "';'", "'<'", "']'", "'='", 
		"'>'", "'<='", "'%'", "'''", "'('", "')'", "'*'", "'+'", "','", "'-'", 
		"'.'", "DEFINE", "SENSOR_COLLECTION", "OBSERVATION_STREAM", "SENSORS_TO_OBSERVATION_STREAM", 
		"SELECT", "FROM", "WHERE", "GROUP", "BY", "HAVING", "DISTINCT", "AS", 
		"AND", "OR", "NOT", "NOT_NULL", "IS_NULL", "IN", "ORDER", "LIMIT", "OFFSET", 
		"ASC", "DESC", "RANGE", "SLIDE", "SECONDS", "MINUTES", "HOURS", "AVG", 
		"MIN", "SUM", "MAX", "COUNT", "CAST", "INT", "REAL", "BOOLEAN", "STRING", 
		"LIKE", "IDENTIFIER", "STRING_LITERAL", "BOOLEAN_LITERAL", "INT_LITERAL", 
		"REAL_LITERAL", "SINGLE_LINE_COMMENT", "MULTILINE_COMMENT", "SPACES"
	};
	public static final int
		RULE_parse = 0, RULE_define_sensor_collections = 1, RULE_define_observation_streams = 2, 
		RULE_define_sensor_collection = 3, RULE_define_observation_stream = 4, 
		RULE_select_stmt = 5, RULE_select_stream_stmt = 6, RULE_select = 7, RULE_column_list = 8, 
		RULE_from = 9, RULE_table = 10, RULE_from_stream = 11, RULE_stream_table = 12, 
		RULE_stream_window = 13, RULE_where = 14, RULE_group_by = 15, RULE_having = 16, 
		RULE_order_by = 17, RULE_limit = 18, RULE_time_interval = 19, RULE_time_unit = 20, 
		RULE_alias_name = 21, RULE_sensor_collection_name = 22, RULE_observation_stream_name = 23, 
		RULE_table_name = 24, RULE_field_name = 25, RULE_column_name = 26, RULE_function_name = 27, 
		RULE_any_name = 28, RULE_result_column = 29, RULE_column_alias = 30, RULE_expr = 31, 
		RULE_type = 32, RULE_field_access = 33, RULE_term_expr = 34, RULE_logic_expr = 35, 
		RULE_literal_value = 36, RULE_agg_func = 37, RULE_parameter_list = 38;
	public static final String[] ruleNames = {
		"parse", "define_sensor_collections", "define_observation_streams", "define_sensor_collection", 
		"define_observation_stream", "select_stmt", "select_stream_stmt", "select", 
		"column_list", "from", "table", "from_stream", "stream_table", "stream_window", 
		"where", "group_by", "having", "order_by", "limit", "time_interval", "time_unit", 
		"alias_name", "sensor_collection_name", "observation_stream_name", "table_name", 
		"field_name", "column_name", "function_name", "any_name", "result_column", 
		"column_alias", "expr", "type", "field_access", "term_expr", "logic_expr", 
		"literal_value", "agg_func", "parameter_list"
	};

	@Override
	public String getGrammarFileName() { return "TQL.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public TQLParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ParseContext extends ParserRuleContext {
		public Define_observation_streamContext define_observation_stream(int i) {
			return getRuleContext(Define_observation_streamContext.class,i);
		}
		public Define_observation_streamsContext define_observation_streams() {
			return getRuleContext(Define_observation_streamsContext.class,0);
		}
		public Define_sensor_collectionContext define_sensor_collection(int i) {
			return getRuleContext(Define_sensor_collectionContext.class,i);
		}
		public Select_stream_stmtContext select_stream_stmt() {
			return getRuleContext(Select_stream_stmtContext.class,0);
		}
		public List<Define_sensor_collectionContext> define_sensor_collection() {
			return getRuleContexts(Define_sensor_collectionContext.class);
		}
		public List<Define_observation_streamContext> define_observation_stream() {
			return getRuleContexts(Define_observation_streamContext.class);
		}
		public Define_sensor_collectionsContext define_sensor_collections() {
			return getRuleContext(Define_sensor_collectionsContext.class,0);
		}
		public ParseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parse; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TQLListener ) ((TQLListener)listener).enterParse(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TQLListener ) ((TQLListener)listener).exitParse(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TQLVisitor ) return ((TQLVisitor<? extends T>)visitor).visitParse(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParseContext parse() throws RecognitionException {
		ParseContext _localctx = new ParseContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_parse);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(78); define_sensor_collections();
			setState(79); define_observation_streams();
			setState(81); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(80); define_sensor_collection();
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(83); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			setState(86); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(85); define_observation_stream();
				}
				}
				setState(88); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==IDENTIFIER || _la==STRING_LITERAL );
			setState(90); select_stream_stmt();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Define_sensor_collectionsContext extends ParserRuleContext {
		public TerminalNode SENSOR_COLLECTION() { return getToken(TQLParser.SENSOR_COLLECTION, 0); }
		public TerminalNode DEFINE() { return getToken(TQLParser.DEFINE, 0); }
		public List<Sensor_collection_nameContext> sensor_collection_name() {
			return getRuleContexts(Sensor_collection_nameContext.class);
		}
		public Sensor_collection_nameContext sensor_collection_name(int i) {
			return getRuleContext(Sensor_collection_nameContext.class,i);
		}
		public Define_sensor_collectionsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_define_sensor_collections; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TQLListener ) ((TQLListener)listener).enterDefine_sensor_collections(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TQLListener ) ((TQLListener)listener).exitDefine_sensor_collections(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TQLVisitor ) return ((TQLVisitor<? extends T>)visitor).visitDefine_sensor_collections(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Define_sensor_collectionsContext define_sensor_collections() throws RecognitionException {
		Define_sensor_collectionsContext _localctx = new Define_sensor_collectionsContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_define_sensor_collections);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(92); match(DEFINE);
			setState(93); match(SENSOR_COLLECTION);
			setState(94); sensor_collection_name();
			setState(99);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__2) {
				{
				{
				setState(95); match(T__2);
				setState(96); sensor_collection_name();
				}
				}
				setState(101);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(102); match(T__14);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Define_observation_streamsContext extends ParserRuleContext {
		public Observation_stream_nameContext observation_stream_name(int i) {
			return getRuleContext(Observation_stream_nameContext.class,i);
		}
		public TerminalNode OBSERVATION_STREAM() { return getToken(TQLParser.OBSERVATION_STREAM, 0); }
		public TerminalNode DEFINE() { return getToken(TQLParser.DEFINE, 0); }
		public List<Observation_stream_nameContext> observation_stream_name() {
			return getRuleContexts(Observation_stream_nameContext.class);
		}
		public Define_observation_streamsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_define_observation_streams; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TQLListener ) ((TQLListener)listener).enterDefine_observation_streams(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TQLListener ) ((TQLListener)listener).exitDefine_observation_streams(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TQLVisitor ) return ((TQLVisitor<? extends T>)visitor).visitDefine_observation_streams(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Define_observation_streamsContext define_observation_streams() throws RecognitionException {
		Define_observation_streamsContext _localctx = new Define_observation_streamsContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_define_observation_streams);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(104); match(DEFINE);
			setState(105); match(OBSERVATION_STREAM);
			setState(106); observation_stream_name();
			setState(111);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__2) {
				{
				{
				setState(107); match(T__2);
				setState(108); observation_stream_name();
				}
				}
				setState(113);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(114); match(T__14);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Define_sensor_collectionContext extends ParserRuleContext {
		public Sensor_collection_nameContext sensor_collection_name() {
			return getRuleContext(Sensor_collection_nameContext.class,0);
		}
		public Select_stmtContext select_stmt() {
			return getRuleContext(Select_stmtContext.class,0);
		}
		public Define_sensor_collectionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_define_sensor_collection; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TQLListener ) ((TQLListener)listener).enterDefine_sensor_collection(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TQLListener ) ((TQLListener)listener).exitDefine_sensor_collection(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TQLVisitor ) return ((TQLVisitor<? extends T>)visitor).visitDefine_sensor_collection(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Define_sensor_collectionContext define_sensor_collection() throws RecognitionException {
		Define_sensor_collectionContext _localctx = new Define_sensor_collectionContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_define_sensor_collection);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(116); sensor_collection_name();
			setState(117); match(T__11);
			setState(118); select_stmt();
			setState(119); match(T__14);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Define_observation_streamContext extends ParserRuleContext {
		public Observation_stream_nameContext observation_stream_name() {
			return getRuleContext(Observation_stream_nameContext.class,0);
		}
		public Sensor_collection_nameContext sensor_collection_name() {
			return getRuleContext(Sensor_collection_nameContext.class,0);
		}
		public TerminalNode SENSORS_TO_OBSERVATION_STREAM() { return getToken(TQLParser.SENSORS_TO_OBSERVATION_STREAM, 0); }
		public Define_observation_streamContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_define_observation_stream; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TQLListener ) ((TQLListener)listener).enterDefine_observation_stream(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TQLListener ) ((TQLListener)listener).exitDefine_observation_stream(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TQLVisitor ) return ((TQLVisitor<? extends T>)visitor).visitDefine_observation_stream(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Define_observation_streamContext define_observation_stream() throws RecognitionException {
		Define_observation_streamContext _localctx = new Define_observation_streamContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_define_observation_stream);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(121); observation_stream_name();
			setState(122); match(T__11);
			setState(123); match(SENSORS_TO_OBSERVATION_STREAM);
			setState(124); match(T__6);
			setState(125); sensor_collection_name();
			setState(126); match(T__5);
			setState(127); match(T__14);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Select_stmtContext extends ParserRuleContext {
		public WhereContext where() {
			return getRuleContext(WhereContext.class,0);
		}
		public FromContext from() {
			return getRuleContext(FromContext.class,0);
		}
		public SelectContext select() {
			return getRuleContext(SelectContext.class,0);
		}
		public Select_stmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_select_stmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TQLListener ) ((TQLListener)listener).enterSelect_stmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TQLListener ) ((TQLListener)listener).exitSelect_stmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TQLVisitor ) return ((TQLVisitor<? extends T>)visitor).visitSelect_stmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Select_stmtContext select_stmt() throws RecognitionException {
		Select_stmtContext _localctx = new Select_stmtContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_select_stmt);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(129); select();
			setState(130); from();
			setState(132);
			_la = _input.LA(1);
			if (_la==WHERE) {
				{
				setState(131); where();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Select_stream_stmtContext extends ParserRuleContext {
		public Group_byContext group_by() {
			return getRuleContext(Group_byContext.class,0);
		}
		public From_streamContext from_stream() {
			return getRuleContext(From_streamContext.class,0);
		}
		public WhereContext where() {
			return getRuleContext(WhereContext.class,0);
		}
		public Order_byContext order_by() {
			return getRuleContext(Order_byContext.class,0);
		}
		public SelectContext select() {
			return getRuleContext(SelectContext.class,0);
		}
		public LimitContext limit() {
			return getRuleContext(LimitContext.class,0);
		}
		public Select_stream_stmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_select_stream_stmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TQLListener ) ((TQLListener)listener).enterSelect_stream_stmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TQLListener ) ((TQLListener)listener).exitSelect_stream_stmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TQLVisitor ) return ((TQLVisitor<? extends T>)visitor).visitSelect_stream_stmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Select_stream_stmtContext select_stream_stmt() throws RecognitionException {
		Select_stream_stmtContext _localctx = new Select_stream_stmtContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_select_stream_stmt);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(134); select();
			setState(135); from_stream();
			setState(137);
			_la = _input.LA(1);
			if (_la==WHERE) {
				{
				setState(136); where();
				}
			}

			setState(140);
			_la = _input.LA(1);
			if (_la==GROUP) {
				{
				setState(139); group_by();
				}
			}

			setState(143);
			_la = _input.LA(1);
			if (_la==ORDER) {
				{
				setState(142); order_by();
				}
			}

			setState(146);
			_la = _input.LA(1);
			if (_la==LIMIT) {
				{
				setState(145); limit();
				}
			}

			setState(148); match(T__14);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SelectContext extends ParserRuleContext {
		public TerminalNode SELECT() { return getToken(TQLParser.SELECT, 0); }
		public Column_listContext column_list() {
			return getRuleContext(Column_listContext.class,0);
		}
		public SelectContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_select; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TQLListener ) ((TQLListener)listener).enterSelect(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TQLListener ) ((TQLListener)listener).exitSelect(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TQLVisitor ) return ((TQLVisitor<? extends T>)visitor).visitSelect(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SelectContext select() throws RecognitionException {
		SelectContext _localctx = new SelectContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_select);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(150); match(SELECT);
			setState(151); column_list();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Column_listContext extends ParserRuleContext {
		public List<Result_columnContext> result_column() {
			return getRuleContexts(Result_columnContext.class);
		}
		public Result_columnContext result_column(int i) {
			return getRuleContext(Result_columnContext.class,i);
		}
		public Column_listContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_column_list; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TQLListener ) ((TQLListener)listener).enterColumn_list(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TQLListener ) ((TQLListener)listener).exitColumn_list(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TQLVisitor ) return ((TQLVisitor<? extends T>)visitor).visitColumn_list(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Column_listContext column_list() throws RecognitionException {
		Column_listContext _localctx = new Column_listContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_column_list);
		int _la;
		try {
			setState(162);
			switch (_input.LA(1)) {
			case T__4:
				enterOuterAlt(_localctx, 1);
				{
				setState(153); match(T__4);
				}
				break;
			case T__6:
			case T__1:
			case AVG:
			case MIN:
			case SUM:
			case MAX:
			case COUNT:
			case CAST:
			case IDENTIFIER:
			case STRING_LITERAL:
			case INT_LITERAL:
			case REAL_LITERAL:
				enterOuterAlt(_localctx, 2);
				{
				setState(154); result_column();
				setState(159);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__2) {
					{
					{
					setState(155); match(T__2);
					setState(156); result_column();
					}
					}
					setState(161);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FromContext extends ParserRuleContext {
		public List<TableContext> table() {
			return getRuleContexts(TableContext.class);
		}
		public TableContext table(int i) {
			return getRuleContext(TableContext.class,i);
		}
		public TerminalNode FROM() { return getToken(TQLParser.FROM, 0); }
		public FromContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_from; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TQLListener ) ((TQLListener)listener).enterFrom(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TQLListener ) ((TQLListener)listener).exitFrom(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TQLVisitor ) return ((TQLVisitor<? extends T>)visitor).visitFrom(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FromContext from() throws RecognitionException {
		FromContext _localctx = new FromContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_from);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(164); match(FROM);
			setState(165); table();
			setState(170);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__2) {
				{
				{
				setState(166); match(T__2);
				setState(167); table();
				}
				}
				setState(172);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TableContext extends ParserRuleContext {
		public Alias_nameContext alias_name() {
			return getRuleContext(Alias_nameContext.class,0);
		}
		public Table_nameContext table_name() {
			return getRuleContext(Table_nameContext.class,0);
		}
		public TableContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_table; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TQLListener ) ((TQLListener)listener).enterTable(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TQLListener ) ((TQLListener)listener).exitTable(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TQLVisitor ) return ((TQLVisitor<? extends T>)visitor).visitTable(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TableContext table() throws RecognitionException {
		TableContext _localctx = new TableContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_table);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(173); table_name();
			setState(175);
			_la = _input.LA(1);
			if (_la==IDENTIFIER || _la==STRING_LITERAL) {
				{
				setState(174); alias_name();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
